# LRS

./: CONTROL_DRONE_CMDS.txt  START_DRONE_CMDS.txt  dronski.txt  launchSITL.sh  runArdupilot.sh  start_drone.sh
GPT Prompts/: Map.txt  Parser.txt  PathFinding.txt
TEST/: create_map1.py  create_map2.py  create_maps_astar.py  map_000.pgm  map_025.pgm  map_050.pgm  map_100.pgm  test_points.csv
proj1/: .gitignore
proj1/install/: local_setup.sh  setup.sh
proj1/install/template_drone_control/lib/template_drone_control/: template_drone_control_node
proj1/install/template_drone_control/share/template_drone_control/: local_setup.sh  package.sh
proj1/log/: latest_build
proj1/src/drone_control/: CMakeLists.txt  package.xml  wowza.txt  wowza2.txt
proj1/src/drone_control/include/drone_control/: drone_control.hpp  path_finding.hpp
proj1/src/drone_control/msg/: CustomPoint.msg
proj1/src/drone_control/nodes/: drone_control_node.cpp  path_finding_node.cpp
proj1/src/drone_control/src/: drone_control.cpp  path_finding.cpp
proj1/src/drone_control/srv/: CustomPath.srv
proj1/src/template_drone_control/src/: template_drone_control_node.cpp
